Refactor: Encapsulate Set<Tag> logic into Tags class